syntax = "proto3";



message raft_log_entry {
  uint64 term = 1;
  uint64 index = 2;
  bytes repeated_tx_logs = 3;
}

message raft_log_state {
  uint64 term = 1;
  uint32 vote = 2;
  uint64 commit_index = 3;
  uint64 consistency_index = 4;
}